--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Berny's Blog
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
+author: Berny Linville
 language: en
 timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: http://example.com
+url: https://blog.devopsthink.org
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
