--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: ''
 keywords:
 author: Berny Linville
 language: zh-CN
-timezone: 'Asia/Shanghai'
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
