--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,3 +31,5 @@ jobs:
           github_token: ${{ secrets.DEPLOY_KEY }}
           publish_dir: ./public
           publish_branch: master  # deploying branch
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
