--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,8 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+      - name: Generate
+        run: hexo g
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
