--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,11 +24,20 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-npm-cache
 
-      - name: Install Dependencies
-        run: npm install
-        
-      - name: Build
-        run: npm run build
+      # - name: Install Dependencies
+      #   run: npm install
+
+      # - name: Build
+      #   run: npm run build
+
+      - name: Install dependencies
+        run: |
+          npm install hexo-cli -g
+          npm install
+
+      - name: Generate files
+        run: |
+          hexo generate
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
