--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Checkout theme repo
+        uses: actions/checkout@v2
+        with:
+          repository: viosey/hexo-theme-material
+          ref: master
+          path: themes/material
+
       - name: Use Node.js 15.x
         uses: actions/setup-node@v2
         with:
@@ -24,20 +31,11 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-npm-cache
 
-      # - name: Install Dependencies
-      #   run: npm install
-
-      # - name: Build
-      #   run: npm run build
-
-      - name: Install dependencies
-        run: |
-          npm install hexo-cli -g
-          npm install
-
-      - name: Generate files
-        run: |
-          hexo generate
+      - name: Install Dependencies
+        run: npm install
+        
+      - name: Build
+        run: npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
