--- a/_config.yml
+++ b/_config.yml
@@ -100,6 +100,21 @@ ignore:
 ## Themes: https://hexo.io/themes/
 theme: material
 
+# rss
+feed:
+  enable: true
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
+  order_by: -date
+  icon: icon.png
+  autodiscovery: true
+  template:
+
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
