--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: material
+theme: butterfly
 
 # rss
 feed:
