--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "hexo-renderer-pug": "^1.0.0",
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
-    "hexo-theme-butterfly": "^3.6.2"
+    "hexo-theme-next": "^8.2.1"
   }
 }
